Fix styling and spacing

--- a/estilo.css
+++ b/estilo.css
@@ -1,17 +1,24 @@
 /* los estilos para todo el sitio web */
 
 body {
-    color: darkslategrey;
+    color: #eee;
     font-family: Ubuntu, Georgia, Garamond, Impact, monospace;
-    background-color:  #292c284e;
+    background-color:  #000000;
+    width: 1000px;
+    margin: 0 auto;
+    padding: 8px;
 }
 
 div {
     width: 1000px;
-    /*border: 2px solid darkslategray;*/
-    background-color: darkslategrey;
+    border: 2px groove grey;
     margin: 16px auto;
     padding: 8px;
+}
+
+.image {
+    border: 0px;
+    text-align: center;
 }
 
 h1, h2, h3 {
@@ -20,39 +27,50 @@ h1, h2, h3 {
     text-decoration: wavy;
     font-weight: 900;
     padding: 8px;
-    background-color:  #d3ffc4;
     margin-bottom: 8px;
     margin-top: 0;
 
 }
 
 h1 {
-    font-size: 32px;
+    font-size: 42px;
 }
 
 h2 {
-    font-size:  25px;
+    font-size:  32px;
 }
 
 h3 {
-    font-size: 19px;
+    font-size: 24px;
+}
+
+.recipes {
+    display: flex;
+    justify-content: center;
+    border: none;
 }
 
 img {
     height: auto;
     width: 500px;
+
 }
 
 p, ol, ul {
     font-weight: 300;
-    font-size: 17px;
+    font-size: 20px;
     margin-bottom: 8px;
     margin-top: 0;
 }
 
+ul {
+    margin: 0;
+    padding: 20px;
+   
+}
+
 li {
-    margin-bottom: 8px;
-    background-color:  #d3ffc4;
+    margin-bottom: 4px;
 }
 
 p {
@@ -61,4 +79,15 @@ p {
 
 .heavy {
     font-weight: 800;
+}
+
+a {
+    text-decoration: none;
+    color: white;
+    border: 1px groove gray;
+    padding: 8px;
+}
+
+.footer {
+    text-align: center;
 }
